# tosk-bot

./: .pre-commit-config.yaml  Dockerfile  Dockerfile.base  README.md  compose.yaml  docker-publish.sh  pyproject.toml  release.sh
bot/: config.py  handlers.py  main.py
butane/: tosk-bot-template.bu  tosk-bot.py
systemd/: tosk-bot.pull.template  tosk-bot.py  tosk-bot.service.template
tests/: mock.py  test_config.py  test_handlers.py
tosk_bot/base/: Dockerfile
tosk_bot/base/service/: config.py  main.py  tgio.py
tosk_bot/base/tests/: test_config.py  test_main.py  test_tgio.py
tosk_bot/ext/ping/: Dockerfile
tosk_bot/ext/ping/service/: config.py  main.py  models.py
tosk_bot/ext/ping/tests/: test_main.py
tosk_bot/tests/: fail.py  test_integrity.py
