[project]
name = "tosk-bot"
version = "0.2.0"
description = ""
authors = [
    {name = "Peter Zakharov",email = "zakharovpnsd@mail.ru"}
]
license = {text = "Unlicense"}
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "pydantic (>=1.8.2,<3.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "python-telegram-bot (>=22.5,<23.0)",
    "pika (>=1.3.2,<2.0.0)",
    "aio-pika (>=9.5.7,<10.0.0)",
    "pure-teleapi[httpx] @ git+https://github.com/archqua/pure-teleapi.git@pure",
    # "pure-teleapi[httpx]",
]

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "pre-commit (>=4.3.0,<5.0.0)",
    "black (>=25.9.0,<26.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pytest-timeout (>=2.4.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "./tosk_bot"
timeout = 5
